Add icon for drafts.

--- a/website/app/application/core/projects/project/project-task-bar.html
+++ b/website/app/application/core/projects/project/project-task-bar.html
@@ -45,6 +45,9 @@
                        ng-class="{inactive: !showPanel('provwizard')}">
                     </i>
                 </a>
+                <a ng-click="" title="Drafts">
+                    <i class="fa fa-fw fa-2x fa-pencil-square-o inactive"></i>
+                </a>
                 <a ng-click="openPanel('settings')" title="Project Settings">
                     <i class="fa fa-fw fa-2x fa-gear" ng-class="{inactive: !showPanel('settings')}"></i>
                 </a>
