--- a/website/app/application/core/reviews/global-reviews.html
+++ b/website/app/application/core/reviews/global-reviews.html
@@ -1,32 +1,33 @@
-<div  class="row" >
+<div class="row" style="padding-top: 100px;">
     <h5 style="text-align: center"><b>Requested</b></h5>
-    <br>
+
     <table class="table">
         <thead style="color: #4b4b4b">
-            <th>Title</th>
-            <th>Projects</th>
-            <th>Assigned to</th>
-            <th></th>
+        <th>Title</th>
+        <th>Projects</th>
+        <th>Assigned to</th>
+        <th></th>
         </thead>
         <tbody>
-            <tr ui-sref="projects.project.home({id: r.project_id})" ng-repeat="r in reviews | byKey:'status':'open' | byKey: 'author': user">
-                <td data-toggle="tooltip" title="{{r.title}}">
-                    {{createName(r.title)}}
-                    <p class="text-muted"
-                       style="font-size: 10px;">
-                        By: {{r.author}} hello
-                    </p>
-                </td>
-                <td data-toggle="tooltip"
-                    title="{{r.project_name}}">
-                    {{createName(r.project_name)}}
-                </td>
-                <td>{{r.assigned_to}}</td>
-                <td ng-if="r.messages.length === 1"></td>
-                <td ng-if="r.messages.length != 1">
-                    <i class="fa fa-comment"></i> {{r.messages.length-1}}
-                </td>
-            </tr>
+        <tr class="pointer" ui-sref="projects.project.home({id: r.project_id})"
+            ng-repeat="r in reviews | byKey:'status':'open' | byKey: 'author': user">
+            <td data-toggle="tooltip" title="{{r.title}}">
+                {{createName(r.title)}}
+                <p class="text-muted"
+                   style="font-size: 10px;">
+                    By: {{r.author}} hello
+                </p>
+            </td>
+            <td data-toggle="tooltip"
+                title="{{r.project_name}}">
+                {{createName(r.project_name)}}
+            </td>
+            <td>{{r.assigned_to}}</td>
+            <td ng-if="r.messages.length === 1"></td>
+            <td ng-if="r.messages.length != 1">
+                <i class="fa fa-comment"></i> {{r.messages.length-1}}
+            </td>
+        </tr>
         </tbody>
     </table>
 
@@ -34,27 +35,27 @@
     <br>
     <table class="table">
         <thead style="color: #4b4b4b">
-            <th>Title</th>
-            <th>Projects</th>
-            <th>Assigned to</th>
-            <th></th>
+        <th>Title</th>
+        <th>Projects</th>
+        <th>Assigned to</th>
+        <th></th>
         </thead>
         <tbody>
-            <tr ui-sref="projects.project.home({id: r.project_id})"
-                ng-repeat="r in reviews | byKey: 'assigned_to': user| byKey: 'status': 'open'">
-                <td data-toggle="tooltip"
-                    title="{{r.title}}">
-                    {{createName(r.title)}}
-                    <p class="text-muted" style="font-size: 10px;">
-                        By: {{r.author}}
-                    </p>
-                </td>
-                <td data-toggle="tooltip"
-                    title="{{r.project_name}}">
-                    {{createName(r.project_name)}}
-                </td>
-                <td>{{r.assigned_to}}</td>
-            </tr>
+        <tr class="pointer" ui-sref="projects.project.home({id: r.project_id})"
+            ng-repeat="r in reviews | byKey: 'assigned_to': user| byKey: 'status': 'open'">
+            <td data-toggle="tooltip"
+                title="{{r.title}}">
+                {{createName(r.title)}}
+                <p class="text-muted" style="font-size: 10px;">
+                    By: {{r.author}}
+                </p>
+            </td>
+            <td data-toggle="tooltip"
+                title="{{r.project_name}}">
+                {{createName(r.project_name)}}
+            </td>
+            <td>{{r.assigned_to}}</td>
+        </tr>
         </tbody>
 
     </table>
