Add drafts functionality back into system.

--- a/website/app/application/core/projects/project/project-task-bar.html
+++ b/website/app/application/core/projects/project/project-task-bar.html
@@ -45,7 +45,7 @@
                        ng-class="{inactive: !showPanel('provwizard')}">
                     </i>
                 </a>
-                <a ng-click="" title="Drafts">
+                <a ui-sref="projects.project.home.drafts" title="Drafts">
                     <i class="fa fa-fw fa-2x fa-pencil-square-o inactive"></i>
                 </a>
                 <a ng-click="openPanel('settings')" title="Project Settings">
