nav bar updates

--- a/website/app/application/core/reviews/global-reviews.html
+++ b/website/app/application/core/reviews/global-reviews.html
@@ -1,4 +1,4 @@
-<div class="row" style="padding-top: 100px;">
+<div class="row">
     <h5 style="text-align: center"><b>Requested</b></h5>
 
     <table class="table">
