--- a/website/app/application/core/projects/project/home/directives/display-sample.html
+++ b/website/app/application/core/projects/project/home/directives/display-sample.html
@@ -19,7 +19,7 @@
     </span>
 
     <p>
-        <button ng-class="{disabled: sample.show}" ng-if="isActive('samples','addToReview')"
+        <button ng-if="isActive('samples','addToReview')"
                 class="btn btn-xs btn-mini btn-success" ng-click="addItem('review')">Add to review
         </button>
         <!--<button ng-if="isActive('samples','addToProvenance')" class="btn btn-xs btn-mini btn-success" ng-click="addItem('provenance')">Add to Provenance</button>-->
