--- a/website/app/index.html
+++ b/website/app/index.html
@@ -192,6 +192,7 @@
 <script src="application/core/projects/project/breadcrumbs.js"></script>
 <script src="application/core/projects/project/project-tabs.js"></script>
 <script src="application/core/projects/project/home/home.js"></script>
+<script src="application/core/projects/project/home/display-panel.js"></script>
 <script src="application/core/projects/project/home/directives/home-sample-details.js"></script>
 <script src="application/core/projects/project/home/directives/home-reviews-directive.js"></script>
 <script src="application/core/projects/project/home/directives/home-samples-directive.js"></script>
