--- a/website/app/application/core/projects/project/home/home.html
+++ b/website/app/application/core/projects/project/home/home.html
@@ -12,10 +12,13 @@
                 <div class="row" ng-if="showPanel('calendar')">
                     <div home-calendar project="project"></div>
                 </div>
-                <div ng-repeat="panel in column1"
-                     ui-draggable="true"
-                     drag="panel"
-                     ui-on-drop="onDropColumn1($index, $data)">
+                <!-- <div ng-repeat="panel in column1"
+                ui-draggable="true"
+                drag="panel"
+                ui-on-drop="onDropColumn1($index, $data)">
+                <display-panel panel-name="panel" project="project"></display-panel>
+                </div> -->
+                <div ng-repeat="panel in column1">
                     <display-panel panel-name="panel" project="project"></display-panel>
                 </div>
             </div>
@@ -23,10 +26,13 @@
         <div ng-show="!isColumnActive('column2')">
             <div ng-class="{'col-xs-6': !isExpandedInColumn(column2), 'col-xs-12': isExpandedInColumn(column2)}"
                  ng-show="!isExpandedInColumn(column1)">
-                <div ng-repeat="panel in column2"
-                     ui-draggable="true"
-                     drag="panel"
-                     ui-on-drop="onDropColumn2($index, $data)">
+                <!-- <div ng-repeat="panel in column2"
+                ui-draggable="true"
+                drag="panel"
+                ui-on-drop="onDropColumn2($index, $data)">
+                <display-panel panel-name="panel" project="project"></display-panel>
+                </div> -->
+                <div ng-repeat="panel in column2">
                     <display-panel panel-name="panel" project="project"></display-panel>
                 </div>
             </div>
