--- a/website/app/application/core/projects/project/home/directives/display-process.html
+++ b/website/app/application/core/projects/project/home/directives/display-process.html
@@ -18,6 +18,7 @@
            id="{{process.id}}">
             <i class="fa fa-fw fa-clipboard inactive"></i>
         </a>
+        <i class="fa fa-fw"></i>
     </span>
     <p>
         <small class="text-muted">{{process.birthtime | toDateString}}</small>
