--- a/website/app/application/core/projects/project/home/directives/display-sample.html
+++ b/website/app/application/core/projects/project/home/directives/display-sample.html
@@ -6,14 +6,10 @@
         {{sample.name | truncate:35: '...':true}}
     </span>
     <span class="pull-right">
-        <a ng-if="showSideboard"
-           ng-click="addToSideboard(sample, $event)"    id="{{sample.id}}">
+        <a ng-click="addToSideboard(sample, $event)" id="{{sample.id}}">
             <i class="fa fa-fw fa-clipboard inactive"></i>
         </a>
-        <a ng-if="!showSideboard"  ng-click="remove(sample, $event)" >
-            <i class="fa fa-fw fa-close mc-danger"></i>
-        </a>
-        <i style="color:#E3CF7A" class="fa fa-fw fa-star"></i>
+
         <i class="fa fa-fw"
            ng-class="{'fa-edit': sample.notes.length !== 0}"></i>
     </span>
