--- a/website/app/application/core/projects/project/project-task-bar.html
+++ b/website/app/application/core/projects/project/project-task-bar.html
@@ -41,18 +41,22 @@
         <div class="col-xs-12">
             <div class="col-xs-2">
                 <a ng-click="openProvWizard()" title="Provenance Wizard">
-                    <i class="fa fa-fw fa-2x fa-magic"
-                       ng-class="{inactive: !showPanel('provwizard')}">
+                    <i class="fa fa-fw fa-2x fa-magic task-bar-tool"
+                       ng-class="{'tool-inactive': !showPanel('provwizard'), 'tool-active': showPanel('provwizard')}">
                     </i>
                 </a>
-                <a ui-sref="projects.project.home.drafts" title="Drafts">
-                    <i class="fa fa-fw fa-2x fa-pencil-square-o inactive"></i>
+                <a ng-click="openDrafts()" title="Drafts">
+                    <i class="fa fa-fw fa-2x fa-pencil-square-o task-bar-tool"
+                       ng-class="{'tool-inactive': !showPanel('drafts'), 'tool-active': showPanel('drafts')}">
+                    </i>
                 </a>
                 <a ng-click="openPanel('settings')" title="Project Settings">
-                    <i class="fa fa-fw fa-2x fa-gear" ng-class="{inactive: !showPanel('settings')}"></i>
+                    <i class="fa fa-fw fa-2x fa-gear task-bar-tool"
+                       ng-class="{'tool-inactive': !showPanel('settings'), 'tool-active': showPanel('settings')}"></i>
                 </a>
                 <a ng-click="openPanel('calendar')" title="Event Calendar">
-                    <i class="fa fa-fw fa-2x fa-calendar" ng-class="{inactive: !showPanel('calendar')}"></i>
+                    <i class="fa fa-fw fa-2x fa-calendar task-bar-tool"
+                       ng-class="{'tool-inactive': !showPanel('calendar'), 'tool-active': showPanel('calendar')}"></i>
                 </a>
             </div>
 
