--- a/website/app/application/core/projects/project/home/directives/home-sideboard.html
+++ b/website/app/application/core/projects/project/home/directives/home-sideboard.html
@@ -36,7 +36,7 @@
                     </h4>
                 </div>
             </li>
-            <li class="home-item" ui-draggable="true" drag="item"
+            <li class="home-item"
                 ng-repeat="item in sideboard | filter:sideboardSearch | orderBy:'name' as matches">
                 <display-item item="item"
                               show-sideboard="false">
