--- a/website/app/application/core/projects/project/home/directives/home-processes.html
+++ b/website/app/application/core/projects/project/home/directives/home-processes.html
@@ -25,7 +25,7 @@
          ng-class="{'no-max-height': isExpanded()}">
         <ul class="list-unstyled">
             <li class="home-item"
-                ng-class="{'open-item-details': process.showDetails}" ui-draggable="true" drag="process"
+                ng-class="{'open-item-details': process.showDetails}"
                 ng-repeat="process in all | filter:search | event:project.date:project.nextdate as procs">
                 <display-process process="process"
                                  show-sideboard="true">
