--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -20,7 +20,7 @@
                             <img class="img-responsive" src="assets/img/userguide/navbar.png">
                         </div>
                     </li>
-                    <li  ng-click="showTaskbar = !showTaskbar" class="list-group-item list-group-item">
+                    <li ng-click="showTaskbar = !showTaskbar" class="list-group-item list-group-item">
                         <i class=" fa fa-fw fa-briefcase"></i>
                         <a>Project Task Bar</a>
 
@@ -28,21 +28,25 @@
                             <img class="img-responsive" src="assets/img/userguide/taskbar.png">
                         </div>
                     </li>
-                    <li  ng-click="showHome = !showHome"  class="list-group-item list-group-item">
+                    <li ng-click="showHome = !showHome" class="list-group-item list-group-item">
                         <i class=" fa fa-fw fa-home"></i> <a>Home Page</a>
 
                         <div style="padding-top: 20px;" ng-show="showHome">
                             <img class="img-responsive" src="assets/img/userguide/home.png">
                         </div>
                     </li>
-                    <li ng-click="showReviews = !showReviews" ng-class="{userguide_panel_active: showReviews}"  class="list-group-item list-group-item">
+                    <li ng-click="showReviews = !showReviews" ng-class="{userguide_panel_active: showReviews}"
+                        class="list-group-item list-group-item">
                         <i class=" fa fa-fw fa-comment-o"></i> <a>Reviews</a>
 
-                        <div style="padding-top: 20px;"  ng-show="showReviews">
+                        <div style="padding-top: 20px;" ng-show="showReviews">
                             <img class="img-responsive" src="assets/img/userguide/show-rev1.png">
+
                             <p style="color: #000000;padding-top: 10px;">
-                                In earlier computing models, e.g. in client-server, the load for the application was shared between code
-                                on the server and code installed on each client locally. In other words, an application had its own client program which served as its
+                                In earlier computing models, e.g. in client-server, the load for the application was
+                                shared between code
+                                on the server and code installed on each client locally. In other words, an application
+                                had its own client program which served as its
                                 user interface and had to be separately installed on each user's persona
                                 l computer. An upgrade to the server-side code of the application would typic
                                 ally also require an upgrade to the client-side code installed on each user w
