--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -18,6 +18,13 @@
 
                         <div style="padding-top: 20px;" ng-show="showNav">
                             <img class="img-responsive" src="assets/img/userguide/navbar.png">
+                            <p style="padding:10px;">
+                                Under the navbar you can: <br>
+                                1. Change your password. <br>
+                                2. Change your username. <br>
+                                3. Customize the templates for provenance creation. <br>
+                                4. Reset your apikey.   <br>
+                            </p>
                         </div>
                     </li>
                     <li ng-click="showTaskbar = !showTaskbar" class="list-group-item list-group-item">
@@ -25,7 +32,10 @@
                         <a>Project Task Bar</a>
 
                         <div style="padding-top: 20px;" ng-show="showTaskbar">
-                            <img class="img-responsive" src="assets/img/userguide/taskbar.png">
+                            <img class="img-responsive" src="assets/img/userguide/projectbar.png">
+                            <p style="padding:10px;">
+                               You can switch between the existing projects or create a new project.
+                            </p>
                         </div>
                     </li>
                     <li ng-click="showHome = !showHome" class="list-group-item list-group-item">
